ddetect (1.06) UNRELEASED; urgency=low

  * Colin Watson
    - Add the ability to back up from the error messages you get if
      ethdetect can't find any network interfaces. We could probably do with
      a state machine of some kind here.
    - Detect mesh controllers on the mac-io bus (closes: #269655, #271419).

 -- Colin Watson <cjwatson@debian.org>  Sun, 12 Sep 2004 16:20:46 +0100

ddetect (1.05) unstable; urgency=low

  * Joey Hess
    - Add usb nic modules to the manual module list. Closes: #262638, #267402
    - Hack to make this work for 2.4 which does not have a usb/nic subdir.
    - In ethdetect, don't prompt twice for module params in a low priority
      install.
  * Updated translations: 
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - Greek, Modern (1453-) (el.po) by Konstantinos Margaritis
    - Spanish (Castilian) (es.po) by Javier Fernandez-Sanguino Peña
    - French (fr.po) by French Team
    - Hebrew (he.po) by Lior Kaplan
    - Croatian (hr.po) by Krunoslav Gernhard
    - Korean (ko.po) by Changwoo Ryu
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Polish (pl.po) by Bartosz Fenski
    - Turkish (tr.po) by Recai Oktaş
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Joey Hess <joeyh@debian.org>  Mon,  6 Sep 2004 17:15:48 -0400

ddetect (1.04) unstable; urgency=low

  * Joey Hess
    - Work around kernel bug #269823 by not loading the hpt366 module
      automatically.

 -- Joey Hess <joeyh@debian.org>  Fri,  3 Sep 2004 15:06:55 -0400

ddetect (1.03) unstable; urgency=low

  * Martin Michlmayr
    - Upstream changed how the SGI O2 (IP 32) is reported in /proc/cpuinfo.
      Deal with the old and the new value.
  * Joey Hess
    - Remove seen flag unsetting code, not necessary for a long time in the
      d-i environment.
  * Colin Watson
    - Make hw-detect Architecture: any so that we don't have to have