@@ -4,7 +4,13 @@ ddetect (1.06) UNRELEASED; urgency=low
     - Add the ability to back up from the error messages you get if
       ethdetect can't find any network interfaces. We could probably do with
       a state machine of some kind here.
-    - Detect mesh controllers on the mac-io bus (closes: #269655, #271419).
+    - mac-io bus detection improvements:
+      + Detect mesh SCSI controller (closes: #269655, #271419).
+      + Detect mace Ethernet controller.
+      + Detect mac53c94 SCSI controller.
+      + Detect therm_adt746x and therm_windtunnel fan controllers, although
+        only post-reboot for now since those modules aren't in
+        linux-kernel-di-powerpc-*.
 
  -- Colin Watson <cjwatson@debian.org>  Sun, 12 Sep 2004 16:20:46 +0100
 
